Heroセクション背景などの修正（会社案内 / サービス一覧 / 問い合わせ / プラポリ）

--- a/company.html
+++ b/company.html
@@ -51,6 +51,14 @@
       scroll-behavior: smooth;
     }
 
+    /* HEROセクション背景画像スタイル */
+    .hero-background {
+      background-image: linear-gradient(rgba(0, 160, 233, 0.4), rgba(0, 160, 233, 0.2)), url('assets/images/hero/company_hero_bg.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
     /* 地図コンテナのアニメーション */
     #company-map {
       opacity: 0;
@@ -109,13 +117,13 @@
   <div id="header-placeholder"></div>
 
   <!-- ヒーローセクション -->
-  <section class="relative bg-gradient-to-br from-accent/10 via-white to-primary/10 py-20">
+  <section class="relative hero-background py-20 md:py-32">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center animate-fade-in-up">
-        <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-6">
+        <h1 class="text-4xl md:text-5xl font-bold text-white mb-6 drop-shadow-lg">
           会社案内
         </h1>
-        <p class="text-lg md:text-xl text-gray-600 max-w-3xl mx-auto leading-relaxed">
+        <p class="text-lg md:text-xl text-white max-w-3xl mx-auto leading-relaxed drop-shadow-md">
           中小企業の業務効率化を支援するITソリューションカンパニー<br>
           私たちは、現場の声に耳を傾け、最適なソリューションを提供します
         </p>
