--- a/services/index.html
+++ b/services/index.html
@@ -44,7 +44,17 @@
   </script>
   
   <style>
-    html { scroll-behavior: smooth; }
+    html { 
+      scroll-behavior: smooth; 
+    }
+    
+    /* HEROセクション背景画像スタイル */
+    .hero-background {
+      background-image: linear-gradient(rgba(0, 160, 233, 0.4), rgba(0, 160, 233, 0.2)), url('../assets/images/hero/services_hero_bg.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
   </style>
 </head>
 <body class="font-roboto text-gray-800 bg-gray-50">
@@ -53,15 +63,14 @@
   <div id="header-placeholder"></div>
 
   <!-- ヒーローセクション -->
-  <section class="relative bg-gradient-to-br from-primary/10 via-white to-accent/5 py-20 md:py-32">
+  <section class="relative hero-background py-20">
+
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="text-right mb-12">
-        <h1 class="text-5xl md:text-7xl font-bold text-primary mb-4">Services</h1>
-        <p class="text-3xl md:text-5xl font-bold text-gray-900">サービス一覧</p>
-      </div>
-      
-      <div class="max-w-4xl mx-auto text-center">
-        <p class="text-xl md:text-2xl text-gray-700 leading-relaxed mb-8">
+      <div class="text-center animate-fade-in-up">
+        <h1 class="text-4xl md:text-5xl font-bold text-white mb-6 drop-shadow-lg">
+          サービス一覧
+        </h1>
+        <p class="text-lg md:text-xl text-white max-w-3xl mx-auto leading-relaxed drop-shadow-md">
           お客様の業務プロセスを深く理解し、<br class="hidden md:block">
           「使いやすい」を超えて「自然に使いたくなる」システムを創る。<br>
           現場の担当者が「これが欲しかった」と実感できる機能から、<br class="hidden md:block">
