--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -49,6 +49,14 @@
       scroll-behavior: smooth;
     }
 
+    /* HEROセクション背景画像スタイル */
+    .hero-background {
+      background-image: linear-gradient(rgba(0, 160, 233, 0.4), rgba(0, 160, 233, 0.2)), url('assets/images/hero/privacy_hero_bg.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
     /* 目次のスティッキー表示 */
     .sticky-toc {
       position: sticky;
@@ -86,13 +94,13 @@
   <div id="header-placeholder"></div>
 
   <!-- ヒーローセクション -->
-  <section class="relative bg-gradient-to-br from-accent/10 via-white to-primary/10 py-16">
+  <section class="relative hero-background py-16 md:py-32">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center">
-        <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">
+        <h1 class="text-4xl md:text-5xl font-bold text-white mb-4 drop-shadow-lg">
           プライバシーポリシー
         </h1>
-        <p class="text-lg text-gray-600">個人情報保護方針</p>
+        <p class="text-lg text-white drop-shadow-md">個人情報保護方針</p>
       </div>
     </div>
   </section>
