全頁Heroセクションデザイン統一など

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="max-w-4xl mx-auto text-center mb-16">
                 <p class="text-gray-600 text-lg leading-relaxed">
                     お客様の業務プロセスを深く理解し、「使いやすい」を超えて「自然に使いたくなる」システムを創る。<br>
-                    現場の担当者が「これが欲しかった」と実感できる機能から、経営層が「これで変わる」と確信できる基幹システムまで、<br>
+                    現場の担当者が「これが欲しかった」と実感できる機能から、<br>経営層が「これで変わる」と確信できる基幹システムまで、<br>
                     業務の実態に完全にフィットした開発を行います。
                 </p>
             </div>
