--- a/services/lowcode.html
+++ b/services/lowcode.html
@@ -78,9 +78,9 @@
   <div id="header-placeholder"></div>
 
   <!-- ヒーローセクション（①背景画像追加） -->
-  <section class="relative hero-background py-20">
+  <section class="relative hero-background py-20 md:py-24">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="text-center max-w-4xl mx-auto">
+      <div class="text-left max-w-4xl mx-auto">
         <div class="inline-block px-6 py-2 bg-white/20 backdrop-blur-sm rounded-full mb-6">
           <span class="text-white font-bold text-lg">ローコード(TALON)開発・導入支援サービス</span>
         </div>
@@ -112,7 +112,7 @@
           <img src="../assets/images/talon/talon.png" alt="TALON" class="h-16 w-auto ml-6">
         </div>
         <p class="text-lg text-gray-700 mb-4 leading-relaxed">
-          TALONとは、株式会社HOIPOIが提供しているローコード開発ツール製品です。
+          TALONとは、株式会社HOIPOI様の提供するローコード開発ツール製品です。
         </p>
         <a href="https://talon.jp/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-primary hover:text-secondary font-semibold transition-colors">
           <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
