ContactページのEmailjs実装

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 
     /* HEROセクション背景画像スタイル */
     .hero-background {
-      background-image: linear-gradient(rgba(0, 160, 233, 0.4), rgba(0, 160, 233, 0.2)), url('assets/images/hero/contact_hero_bg.png');
+      background-image: linear-gradient(rgba(26, 26, 26, 0.4), rgba(26, 26, 26, 0.2)), url('assets/images/hero/contact_hero_bg.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -144,8 +144,8 @@
                   </svg>
                   <div>
                     <p class="font-semibold mb-1">メール</p>
-                    <a href="mailto:info@khaithac-jp.com" class="hover:underline">
-                      info@khaithac-jp.com
+                    <a href="mailto:contact@khaithac-jp.com" class="hover:underline">
+                      contact@khaithac-jp.com
                     </a>
                   </div>
                 </div>
@@ -326,6 +326,9 @@
   <!-- フッター -->
   <div id="footer-placeholder"></div>
 
+  <!-- EmailJS SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  
   <!-- JavaScript -->
   <script src="assets/js/config.js"></script>
   <script src="assets/js/contact.js"></script>
