--- a/services/index.html
+++ b/services/index.html
@@ -50,7 +50,7 @@
     
     /* HEROセクション背景画像スタイル */
     .hero-background {
-      background-image: linear-gradient(rgba(0, 160, 233, 0.4), rgba(0, 160, 233, 0.2)), url('../assets/images/hero/services_hero_bg.png');
+      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('../assets/images/hero/services_hero_bg.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
