--- a/services/webapp.html
+++ b/services/webapp.html
@@ -47,7 +47,7 @@
     html { scroll-behavior: smooth; }
     /* HEROセクション背景画像スタイル */
     .hero-background {
-      background-image: linear-gradient(rgba(0, 160, 233, 0.4), rgba(82, 143, 171, 0.2)), url('../assets/images/hero/mobileapp_hero_bg.jpeg');
+      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('../assets/images/hero/mobileapp_hero_bg.jpeg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
