細かい修正、トレードカラー、写真の入れ替えなど

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -51,7 +51,7 @@
 
     /* HEROセクション背景画像スタイル */
     .hero-background {
-      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('assets/images/hero/privacy_hero_bg.png');
+      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('assets/images/hero/privacy_hero_bg.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
