--- a/services/lowcode.html
+++ b/services/lowcode.html
@@ -46,7 +46,7 @@
     html { scroll-behavior: smooth; }
     /* HEROセクション背景画像スタイル */
     .hero-background {
-      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('../assets/images/hero/talon_hero_bg.jpeg');
+      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('../assets/images/hero/talon_hero_bg.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -67,7 +67,7 @@
       background-size: 600px auto;
       background-position: left center;
       background-repeat: no-repeat;
-      opacity: 0.15;
+      opacity: 0.55;
       pointer-events: none;
     }
   </style>
@@ -524,8 +524,8 @@
   </section>
 
   <!-- CTAセクション（③透かしロゴ追加 - 修正版） -->
-  <section class="py-16 cta-watermark relative overflow-hidden">
-    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center relative z-10">
+  <section class="py-16 bg-gradient-to-r from-[#0371BC] to-[#025D9C]">
+    <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
       <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">
         TALON導入のご相談はこちら
       </h2>
