--- a/services/access.html
+++ b/services/access.html
@@ -37,6 +37,7 @@
             'primary': '#00A0E9',
             'secondary': '#0088CC',
             'accent': '#10B981',
+            'access': '#A4373C',     // ACCESSカラー
           }
         }
       }
@@ -66,8 +67,15 @@
         <div class="inline-block px-6 py-2 bg-white/20 backdrop-blur-sm rounded-full mb-6">
           <span class="text-white font-bold text-lg">ACCESS開発</span>
         </div>
-        <h1 class="text-4xl md:text-5xl font-bold text-white mb-6 drop-shadow-lg">
-          ACCESSを、<br>もっと使いやすく、<br>もっと頼れる存在に。
+        <h1 class="text-4xl md:text-5xl font-bold text-white mb-6">
+          <span class="text-6xl md:text-8xl font-black" style="color: #A4373C; text-shadow: 
+            -2px -2px 0 #fff,  
+            2px -2px 0 #fff,
+            -2px  2px 0 #fff,
+            2px  2px 0 #fff,
+            0px  4px 8px rgba(0,0,0,0.5);">ACCESS</span>を、<br>
+          もっと使いやすく、<br>
+          もっと頼れる存在に。
         </h1>
         <p class="text-xl text-white leading-relaxed drop-shadow-md">
           現状の課題を見える化し、今もこれからも使い続けられる<br>
@@ -158,8 +166,8 @@
         <!-- サービス1 -->
         <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition-all duration-300">
           <div class="flex items-start">
-            <div class="flex-shrink-0 w-12 h-12 bg-primary/10 rounded-lg flex items-center justify-center mr-6">
-              <span class="text-primary font-bold text-xl">01</span>
+            <div class="flex-shrink-0 w-12 h-12 bg-[#A4373C]/10 rounded-lg flex items-center justify-center mr-6">
+              <span class="text-[#A4373C] font-bold text-xl">01</span>
             </div>
             <div class="flex-1">
               <h3 class="text-2xl font-bold text-gray-900 mb-4">現状分析・課題の見える化</h3>
@@ -194,8 +202,8 @@
         <!-- サービス2 -->
         <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition-all duration-300">
           <div class="flex items-start">
-            <div class="flex-shrink-0 w-12 h-12 bg-primary/10 rounded-lg flex items-center justify-center mr-6">
-              <span class="text-primary font-bold text-xl">02</span>
+            <div class="flex-shrink-0 w-12 h-12 bg-[#A4373C]/10 rounded-lg flex items-center justify-center mr-6">
+              <span class="text-[#A4373C] font-bold text-xl">02</span>
             </div>
             <div class="flex-1">
               <h3 class="text-2xl font-bold text-gray-900 mb-4">段階的な改修・最適化</h3>
@@ -230,8 +238,8 @@
         <!-- サービス3 -->
         <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition-all duration-300">
           <div class="flex items-start">
-            <div class="flex-shrink-0 w-12 h-12 bg-primary/10 rounded-lg flex items-center justify-center mr-6">
-              <span class="text-primary font-bold text-xl">03</span>
+            <div class="flex-shrink-0 w-12 h-12 bg-[#A4373C]/10 rounded-lg flex items-center justify-center mr-6">
+              <span class="text-[#A4373C] font-bold text-xl">03</span>
             </div>
             <div class="flex-1">
               <h3 class="text-2xl font-bold text-gray-900 mb-4">他システムへの移行支援</h3>
@@ -266,8 +274,8 @@
         <!-- サービス4 -->
         <div class="bg-white rounded-2xl shadow-lg p-8 hover:shadow-xl transition-all duration-300">
           <div class="flex items-start">
-            <div class="flex-shrink-0 w-12 h-12 bg-primary/10 rounded-lg flex items-center justify-center mr-6">
-              <span class="text-primary font-bold text-xl">04</span>
+            <div class="flex-shrink-0 w-12 h-12 bg-[#A4373C]/10 rounded-lg flex items-center justify-center mr-6">
+              <span class="text-[#A4373C] font-bold text-xl">04</span>
             </div>
             <div class="flex-1">
               <h3 class="text-2xl font-bold text-gray-900 mb-4">ドキュメント整備・属人化解消</h3>
@@ -364,7 +372,7 @@
   </section>
 
   <!-- CTAセクション -->
-  <section class="py-16 bg-gradient-to-r from-primary to-secondary">
+  <section class="py-16 bg-gradient-to-r from-[#A4373C] to-[#8B2F34]">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
       <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">
         ACCESS改修のご相談はこちら
@@ -373,7 +381,7 @@
         現状のシステムを診断し、最適な改善プランをご提案します。<br>
         まずはお気軽にご相談ください。
       </p>
-      <a href="../contact.html" class="inline-block px-10 py-4 bg-white text-primary font-bold rounded-lg shadow-lg hover:shadow-2xl hover:scale-105 transition-all duration-300 text-lg">
+      <a href="../contact.html" class="inline-block px-10 py-4 bg-white text-access font-bold rounded-lg shadow-lg hover:shadow-2xl hover:scale-105 transition-all duration-300 text-lg">
         無料相談を申し込む
       </a>
     </div>
