--- a/services/scratch.html
+++ b/services/scratch.html
@@ -47,7 +47,7 @@
     html { scroll-behavior: smooth; }
     /* HEROセクション背景画像スタイル */
     .hero-background {
-      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('../assets/images/hero/scrach_hero_bg.jpeg');
+      background-image: linear-gradient(rgba(26,26,26, 0.4), rgba(26,26,26, 0.2)), url('../assets/images/hero/scrach_hero_bg.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
