--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </section>
 
     <!-- ACCESS課題セクション -->
-    <section class="py-20 bg-gray-50">
+    <section class="py-20 bg-gradient-to-br from-[#FFF5F5] to-[#FFE5E8]">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <!-- 左カラム：画像 -->
@@ -227,17 +227,17 @@
                     </div>
                     
                     <!-- ボタン -->
-                    <div class="flex flex-wrap gap-4">
-                        <a href="services/access.html" class="inline-flex items-center justify-center px-8 py-3 bg-[#00A0E9] text-white font-bold rounded-lg hover:bg-[#0088CC] transition-all duration-300 shadow-md hover:shadow-lg">
-                            ACCESS開発を見る
-                        </a>
-                        <a href="contact.html" class="inline-flex items-center justify-center px-8 py-3 bg-white text-[#00A0E9] font-bold rounded-lg border-2 border-[#00A0E9] hover:bg-[#00A0E9] hover:text-white transition-all duration-300 shadow-md hover:shadow-lg">
-                            無料相談する
-                            <svg class="ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
-                            </svg>
-                        </a>
-                    </div>
+                <div class="flex flex-wrap gap-4">
+                    <a href="services/access.html" class="inline-flex items-center justify-center px-8 py-3 bg-[#A4373C] text-white font-bold rounded-lg hover:bg-[#8B2F34] transition-all duration-300 shadow-md hover:shadow-lg">
+                        ACCESS開発を見る
+                    </a>
+                    <a href="contact.html" class="inline-flex items-center justify-center px-8 py-3 bg-white text-[#A4373C] font-bold rounded-lg border-2 border-[#A4373C] hover:bg-[#A4373C] hover:text-white transition-all duration-300 shadow-md hover:shadow-lg">
+                        無料相談する
+                        <svg class="ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
+                        </svg>
+                    </a>
+                </div>
                 </div>
             </div>
         </div>
