開発事例作成中

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <!-- 左カラム：画像 -->
                 <div>
-                    <img src="assets/images/home/home_access.png" alt="Access業務システム" class="w-full h-auto rounded-lg">
+                    <img src="assets/images/home/home_access.jpg" alt="Access業務システム" class="w-full h-auto rounded-lg">
                 </div>
                 
                 <!-- 右カラム：コンテンツ -->
@@ -257,8 +257,8 @@
                 <!-- 左側：メインケーススタディ -->
                 <div class="lg:row-span-2">
                     <div class="bg-white rounded-2xl shadow-2xl overflow-hidden h-full">
-                        <div class="aspect-video bg-gray-200 flex items-center justify-center">
-                            <img src="assets/images/works/case1.jpg" alt="事例1" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%23e5e7eb%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22%239ca3af%22%3ECase Study 1%3C/text%3E%3C/svg%3E';">
+                        <div class="aspect-video bg-gray-200 flex items-center justify-center overflow-hidden">
+                            <img src="assets/images/works/case1.jpg" alt="生産管理システムの全面刷新" class="w-full h-full object-cover" loading="lazy" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 1280 720%22%3E%3Crect fill=%22%23e5e7eb%22 width=%221280%22 height=%22720%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2248%22 fill=%22%239ca3af%22%3ECase Study 1%3C/text%3E%3C/svg%3E';">
                         </div>
                         <div class="p-8">
                             <span class="inline-block px-3 py-1 bg-blue-100 text-blue-600 text-sm font-semibold rounded-full mb-3">● 製造業</span>
@@ -279,7 +279,7 @@
                 <!-- 右側上：サブケーススタディ2 -->
                 <div>
                     <div class="bg-white rounded-2xl shadow-2xl overflow-hidden h-full">
-                        <div class="aspect-video bg-gray-200 flex items-center justify-center">
+                        <div class="aspect-video bg-gray-200 flex items-center justify-center overflow-hidden">
                             <img src="assets/images/works/case2.jpg" alt="事例2" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%23e5e7eb%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22%239ca3af%22%3ECase Study 2%3C/text%3E%3C/svg%3E';">
                         </div>
                         <div class="p-6">
@@ -301,7 +301,7 @@
                 <!-- 右側下：サブケーススタディ3 -->
                 <div>
                     <div class="bg-white rounded-2xl shadow-2xl overflow-hidden h-full">
-                        <div class="aspect-video bg-gray-200 flex items-center justify-center">
+                        <div class="aspect-video bg-gray-200 flex items-center justify-center overflow-hidden">
                             <img src="assets/images/works/case3.jpg" alt="事例3" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%23e5e7eb%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22%239ca3af%22%3ECase Study 3%3C/text%3E%3C/svg%3E';">
                         </div>
                         <div class="p-6">
@@ -344,22 +344,23 @@
             
             <!-- アプリケーションカード -->
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
-                <!-- アプリ1 -->
+                <!-- アプリ1：CycleEarth -->
                 <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border border-gray-100">
-                    <div class="aspect-video bg-gradient-to-br from-blue-400 to-blue-600 flex items-center justify-center">
-                        <img src="assets/images/works/app1.jpg" alt="アプリ1" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%233b82f6%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22white%22%3EApp 1%3C/text%3E%3C/svg%3E';">
+                    <div class="aspect-video bg-gradient-to-br from-emerald-400 to-green-600 flex items-center justify-center overflow-hidden">
+                        <img src="assets/images/works/cycleearth_logo.png" alt="CycleEarth" class="w-full h-full object-cover" loading="lazy" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 800 450%22%3E%3Crect fill=%22%2310b981%22 width=%22800%22 height=%22450%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2236%22 fill=%22white%22%3ECycleEarth%3C/text%3E%3C/svg%3E';">
                     </div>
                     <div class="p-8">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-3">在庫管理アプリ</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 mb-3">CycleEarth</h3>
+                        <p class="text-sm text-emerald-600 font-semibold mb-3">3D地球バーチャルサイクリング</p>
                         <p class="text-gray-600 mb-4 leading-relaxed">
-                            リアルタイムで在庫状況を把握できるモバイル対応の在庫管理システム。バーコード読み取りにも対応。
+                            ルームバイクを漕ぐと、その回転数に応じて3D地球上を実際に移動。世界中の任意の場所をスタート地点に設定し、サイクリング視点でリアルタイムに自由移動できます。運動不足解消と単調さを克服する革新的Webアプリ。
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="px-3 py-1 bg-blue-100 text-blue-600 text-sm font-semibold rounded-full">iOS</span>
-                            <span class="px-3 py-1 bg-blue-100 text-blue-600 text-sm font-semibold rounded-full">Android</span>
-                            <span class="px-3 py-1 bg-blue-100 text-blue-600 text-sm font-semibold rounded-full">Web</span>
+                            <span class="px-3 py-1 bg-emerald-100 text-emerald-600 text-sm font-semibold rounded-full">Web</span>
+                            <span class="px-3 py-1 bg-emerald-100 text-emerald-600 text-sm font-semibold rounded-full">BLE連動</span>
+                            <span class="px-3 py-1 bg-emerald-100 text-emerald-600 text-sm font-semibold rounded-full">3DMAP</span>
                         </div>
-                        <a href="works/app1.html" class="inline-flex items-center text-[#00A0E9] font-semibold hover:text-[#0088CC] transition-colors text-lg">
+                        <a href="works/cycleearth.html" class="inline-flex items-center text-[#00A0E9] font-semibold hover:text-[#0088CC] transition-colors text-lg">
                             詳しく見る
                             <svg class="ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
@@ -371,7 +372,7 @@
                 <!-- アプリ2 -->
                 <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border border-gray-100">
                     <div class="aspect-video bg-gradient-to-br from-emerald-400 to-emerald-600 flex items-center justify-center">
-                        <img src="assets/images/works/app2.jpg" alt="アプリ2" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%2310b981%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22white%22%3EApp 2%3C/text%3E%3C/svg%3E';">
+                        <img src="assets/images/works/app2.png" alt="アプリ2" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%2310b981%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22white%22%3EApp 2%3C/text%3E%3C/svg%3E';">
                     </div>
                     <div class="p-8">
                         <h3 class="text-2xl font-bold text-gray-900 mb-3">勤怠管理アプリ</h3>
@@ -394,7 +395,7 @@
                 <!-- アプリ3 -->
                 <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 overflow-hidden group border border-gray-100">
                     <div class="aspect-video bg-gradient-to-br from-purple-400 to-purple-600 flex items-center justify-center">
-                        <img src="assets/images/works/app3.jpg" alt="アプリ3" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%239333ea%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22white%22%3EApp 3%3C/text%3E%3C/svg%3E';">
+                        <img src="assets/images/works/app3.png" alt="アプリ3" class="w-full h-full object-cover" onerror="this.onerror=null; this.src='data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 400 300%22%3E%3Crect fill=%22%239333ea%22 width=%22400%22 height=%22300%22/%3E%3Ctext x=%2250%25%22 y=%2250%25%22 dominant-baseline=%22middle%22 text-anchor=%22middle%22 font-family=%22sans-serif%22 font-size=%2224%22 fill=%22white%22%3EApp 3%3C/text%3E%3C/svg%3E';">
                     </div>
                     <div class="p-8">
                         <h3 class="text-2xl font-bold text-gray-900 mb-3">営業支援アプリ</h3>
